--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,102 @@
 .App {
   background-color: #fcb6bb;
   min-height: 100vh;
+  text-align: center;
 }
 
 .App-link {
   color: #61dafb;
+}
+
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
+}
+
+.App-header {
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+
+.App-link {
+  color: #61dafb;
+}
+
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.topnav {
+  overflow: hidden;
+  background-color: #23272a;
+  padding: 10px;
+  width: 100%;
+  display: flex;
+
+  align-items: center;
+}
+
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 10px 10px 10px 10px;
+  text-decoration: none;
+  font-size: 30px;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.topnav a.active {
+  background-color: #7289da;
+  color: white;
+}
+
+.topnav a.logo {
+  pointer-events: none;
+}
+
+.topnav a.logo img {
+  width: 90px;
+  height: 75px;
+  padding-left: 10px;
+}
+
+.my-nav{
+  background-color: #000000 !important;
+  color: #7289DA !important;
+  text-decoration: none; /* no underline */
+  font-size: 35px;
+  /*word-spacing: 20px;*/
+}
+
+.mr-auto{
+  color: #7289DA;
+  text-decoration: none;
+}
+
+.table {
+  color: blue;
+  font-weight: bold;
+  margin: 0px 0px 150px 80px;
 }
