--- a/src/components/styles/index.css
+++ b/src/components/styles/index.css
@@ -1,5 +1,12 @@
-    .layout {
-        background-color: grey;
+    .homepage-layout {
+        background-color: #2C2F33;
+        display: flex;
+        text-align: center;
+        padding: 10px 10px 10px 10px;
+    }
+
+    .homepage-text {
+        color: #4E5D94;
         display: flex;
         text-align: center;
         padding: 10px 10px 10px 10px;
@@ -8,12 +15,12 @@
 
     footer {
         display: inline-block; 
-        background-color: #4E5D94;
+        background-color: black;
         padding-top: 10px; 
         padding-left: 40px;  
         padding-bottom: 30px; 
         text-align: left; 
-        color: #5539CC; /*white;*/
+        color: white;
         bottom: 0;
         position: relative;
         width: 100%;
@@ -21,11 +28,6 @@
       
       footer a:hover {
         color: #FFFFFF;
-      }
-      
-      footer a {
-        text-decoration: none;
-        color: #7289da;
       }
       
       footer a {
