--- a/src/components/styles/index.css
+++ b/src/components/styles/index.css
@@ -1,16 +1,24 @@
-    .homepage-layout {
-        background-color: #2C2F33;
+    .homepage_layout {
+        background-color: #4E5D94;
         display: flex;
         text-align: center;
         padding: 10px 10px 10px 10px;
     }
 
-    .homepage-text {
-        color: #4E5D94;
-        display: flex;
+    .homepage_text {
+        color: white;
+        /* display: flex; */
         text-align: center;
         padding: 10px 10px 10px 10px;
         font-size: 30px
+    }
+
+    .homepage_title {
+        color: white;
+        display: flex;
+        font-size: 50px;
+        text-align: center;
+        padding: 10px 10px 10px 10px;
     }
 
     footer {
