--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .App {
-  background-color: #fcb6bb;
+  background-color: #4E5D94;
   min-height: 100vh;
   text-align: center;
 }
@@ -8,95 +8,47 @@
   color: #61dafb;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.homepage_layout {
+  background-color: #4E5D94;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-.topnav {
-  overflow: hidden;
-  background-color: #23272a;
-  padding: 10px;
-  width: 100%;
-  display: flex;
-
-  align-items: center;
-}
-
-.topnav a {
-  float: left;
-  color: #f2f2f2;
   text-align: center;
   padding: 10px 10px 10px 10px;
-  text-decoration: none;
-  font-size: 30px;
 }
 
-.topnav a:hover {
-  background-color: #ddd;
-  color: black;
-}
-
-.topnav a.active {
-  background-color: #7289da;
+.homepage_text {
   color: white;
+  /* display: flex; */
+  text-align: center;
+  padding: 10px 10px 10px 10px;
+  font-size: 30px
 }
 
-.topnav a.logo {
-  pointer-events: none;
+.homepage_title {
+  color: white;
+  display: flex;
+  font-size: 50px;
+  text-align: center;
+  padding: 10px 10px 10px 10px;
 }
 
-.topnav a.logo img {
-  width: 90px;
-  height: 75px;
-  padding-left: 10px;
+footer {
+  display: inline-block; 
+  background-color: black;
+  padding-top: 10px; 
+  padding-left: 40px;  
+  padding-bottom: 30px; 
+  text-align: left; 
+  color: white;
+  bottom: 0;
+  position: relative;
+  width: 100%;
 }
 
-.my-nav{
-  background-color: #000000 !important;
-  color: #7289DA !important;
-  text-decoration: none; /* no underline */
-  font-size: 35px;
-  /*word-spacing: 20px;*/
+footer a:hover {
+  color: #FFFFFF;
 }
 
-.mr-auto{
-  color: #7289DA;
+footer a {
   text-decoration: none;
-}
-
-.table {
-  color: blue;
-  font-weight: bold;
-  margin: 0px 0px 150px 80px;
+  color: #7289da;
 }
