--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,49 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.homepage_layout {
+  background-color: #4E5D94;
+  display: flex;
+  text-align: center;
+  padding: 10px 10px 10px 10px;
+}
+
+.homepage_text {
+  color: white;
+  /* display: flex; */
+  text-align: center;
+  padding: 10px 10px 10px 10px;
+  font-size: 30px
+}
+
+.homepage_title {
+  color: white;
+  display: flex;
+  font-size: 50px;
+  text-align: center;
+  padding: 10px 10px 10px 10px;
+}
+
+footer {
+  display: inline-block; 
+  background-color: black;
+  padding-top: 10px; 
+  padding-left: 40px;  
+  padding-bottom: 30px; 
+  text-align: left; 
+  color: white;
+  bottom: 0;
+  position: relative;
+  width: 100%;
+}
+
+footer a:hover {
+  color: #FFFFFF;
+}
+
+footer a {
+  text-decoration: none;
+  color: #7289da;
+}
+
