changed color of homepage title to blurple

--- a/src/index.css
+++ b/src/index.css
@@ -28,7 +28,7 @@ code {
 }
 
 .homepage_title {
-  color: white;
+  color: #4E5D94;
   /*display: flex;*/
   font-size: 40px;
   text-align: center;
