--- a/src/index.css
+++ b/src/index.css
@@ -12,26 +12,26 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
 .homepage_layout {
   background-color: #4E5D94;
   text-align: center;
   padding: 10px 10px 10px 10px;
-  height: 1000px;
+  height: 800px;
   width: 101%;
+  position: relative;
 }
 
 .homepage_text {
   color: white;
-  line-height: 1.7;
+  line-height: 1.3;
   display: flex; 
   text-align: center;
   padding: 10px 10px 10px 10px;
   font-size: 30px;
-  
   margin-left: auto;
   margin-right: auto;  
   width: 75%;
-  
   text-shadow: -0.5px 0 black, 0 0.5px black, 0.5px 0 black, 0 -0.5px black;
 }
 
@@ -81,8 +81,8 @@ code {
   align-items: middle;
   vertical-align: center;
   margin: 50px auto 20px;
-  height: 355px;
-  width: 500px;
+  height: 300px;
+  width: 400px;
   float: center;
 }
 
